# tienlen

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  flake.nix  justfile  notes.md
.cargo/: config.toml
client/: Cargo.toml  Makefile.toml  app.js  index.html  justfile  tools.js
client/assets/: game.config.ron  output.css
client/src/: app.rs  assets.rs  fps.rs  game.rs  lib.rs  main.rs  resources.rs  states.rs  system_set.rs
client/src/cards/: mod.rs
client/src/components/: interp.rs  markers.rs  mod.rs
client/src/game/: controller.rs  mod.rs  player_ui.rs  status.rs  table.rs
client/src/game/cards/: mod.rs
client/src/systems/: common.rs  events.rs  init.rs  input.rs  mod.rs  sync.rs
client/src/ui/: assets.rs  foreign_player.rs  mod.rs  play_btn.rs  player.rs  playerui.rs  table.rs  timer.rs
client/src/welcome/: mod.rs
scripts/: build-server.sh  deploy-web.sh  restart-server.sh  stream-server-log.sh  update-server.sh
server/: Cargo.toml
server/src/: main.rs  resources.rs
server/src/systems/: common.rs  events.rs  init.rs  mod.rs
shared/: Cargo.toml  flake.nix
shared/src/: channels.rs  env.rs  lib.rs
shared/src/behavior/: mod.rs  update_table.rs
shared/src/components/: cache.rs  card.rs  cards.rs  deck.rs  hand.rs  mod.rs  player.rs  rank.rs  server_hand.rs  suit.rs  table.rs  timer.rs  turn.rs
shared/src/messages/: counter.rs  error.rs  game.rs  mod.rs  player.rs
src/: box_game.rs  camera.rs  card.rs  cards.rs  deck.rs  hand.rs  main.rs  manager.rs  player.rs  rank.rs  states.rs  suit.rs
src/ui/: assets.rs  hand.rs  mod.rs  play_btn.rs  table.rs
