[package]
name = "tienlen"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
	"Document",
	"Location",
] }
serde_qs = "0.12"
wasm-bindgen = "0.2"
ggrs = { version = "0.9", features = ["wasm-bindgen"] }

[dependencies]
bevy = "0.10.1"
bevy_egui = "0.20.2"
bevy-inspector-egui = "0.18"
bevy_svg = { version = "0.9.0", features = [ "2d"] }
bincode = "1.3.3"
serde = { version = "1.0", features = [ "derive" ] }
bevy_asset_loader =  {version = "0.16.0", features = ["2d"]}
rand = "0.8.5"
bevy_ggrs = { version = "0.12", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.6", features = ["ggrs"] }
ggrs = "0.9.4"
clap = { version = "4.3.2", features = ["derive"] }
bytemuck = "1.13.1"
