[package]
name = "app"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "app"
path = "src/main.rs"

[lib]
name = "app"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]

[dependencies]
naia-bevy-client = { version = "0.21.0", features = ["transport_webrtc"] }
naia-bevy-demo-shared = { path = "../shared" }
bevy = { version = "0.10.1", features = [ "bevy_asset", "bevy_winit", "bevy_core_pipeline", "bevy_render", "bevy_sprite", "x11"] }
bevy_prototype_lyon = "0.8"
bevy_egui = "0.20.3"
cfg-if = { version = "1.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.84", features = [ "serde-serialize" ] }
