[package]
name = "app"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "app"
path = "src/main.rs"

[lib]
name = "app"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]

[dependencies]
naia-bevy-client = { version = "0.21.1", features = ["transport_webrtc"] }
naia-bevy-demo-shared = { path = "../shared" }
bevy = { version = "0.11.3" }
bevy_prototype_lyon = "0.9"
bevy_egui = "0.21"
cfg-if = { version = "1.0" }
bevy-inspector-egui = { version = "0.19.0", default-features = false }
bevy_common_assets = { version = "0.7.0", features = ["ron"] }
serde = "1"
bevy_mod_picking = "0.15.0"
bevy_tweening = "0.8.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.84", features = [ "serde-serialize" ] }


[profile.wasm-release]
codegen-units = 1
inherits = "release"
lto = "fat"
opt-level = 'z'
