[package]
name = "tienlen-server"
version = "0.0.39"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
naia-bevy-demo-shared = { path = "../shared" }
bevy_app = { version = "0.11.2", default-features=false }
bevy_time = { version = "0.11.2", default-features=false }
bevy_core = { version = "0.11.2", default-features=false }
bevy_ecs = { version = "0.11.2", default-features=false }
bevy_log = { version = "0.11.2", default-features=false }
naia-bevy-server = { version = "0.21.1", features = [ "transport_webrtc" ] }
