[package]
name = "naia-bevy-demo-shared"
version = "0.1.0"
authors = ["tungtose <tungtose@gmail.com>"]
edition = "2021"
publish = false

[features]

[dependencies]
bevy_ecs = { version = "0.12", default-features = false}
serde = { version = "1.0", features = [ "derive" ] }
cfg-if = { version = "1.0" }
log = { version = "0.4" }
naia-bevy-shared = { git = "https://github.com/tungtose/naia.git", branch = "bevy-0.12" }
rand = "0.8.5"
dotenv = "0.15.0"
